[package]
name = "rusty-bucket"
version = "0.1.0"
authors = ["shaileshv", "hab278"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.22.12"
aws-creds = "0.23.1"
rocket = "0.4"
rocket_codegen = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]